<resources>
    <string name="app_name">Mi Touch Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="menu_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nombre de Usuario:</string>
    <string name="prompt_user">Nombre completo:</string>
    <string name="prompt_password">Contraseña: </string>
    <string name="prompt_gmail">Direccion de correo:</string>
    <string name="action_sign_in">Iniciar Sesion</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_forgot_password"></string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="NombreCompleto">Nombre Completo</string>
    <string name="Mail">Mail</string>
    <string name="Registrarse"> Registrarse </string>
    <string name="Cancelar"> Cancelar </string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_menu_activity_grid_view">Menu</string>
    <string name="title_activity_setting">Configuración</string>
    <string name="title_activity_probando_layout">MiTouch</string>
    <string name="title_activity_google_drive">GoogleDrive</string>
    <string name="title_activity_google_calendar">Google Calendar</string>
    <string name="title_activity_galeria">Galeria</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_settings_con_pestania">Configuración</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Menu_lateral">Google Drive</string>
    <string name="Menu_lateral_galeria">Galeria</string>
    <string name="title_activity_cambiar_password">Cambiar contraseña</string>
    <string name="title_activity_pedir_acceso_grupos">Solicitar Acceso</string>
    <string name="title_activity_registrar">Registro de Usuarios</string>
    <string name="option_today">Ver eventos de hoy</string>
    <string name="option_date">Ver evento de una fecha específica</string>
    <string name="option_create">Crear evento</string>
    <string name="fecha_inicio">Fecha de Inicio</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_fin">Hora fin</string>
    <string name="titulo_evento">Título</string>
    <string name="descripcion_evento">Descripción</string>
    <string name="lugar_evento">Lugar</string>
    <string name="email_evento">Email adicional</string>
    <string name="crear_evento">Crear evento</string>
    <string name="title_activity_compartir">MiTouch</string>
    <string name="title_activity_compartir2">Compartir</string>
    <string name="title_activity_compartir3">Compartir</string>
    <string name="title_activity_explorador">Explorador</string>


    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/folder</item>
    </string-array>
    <string name="title_activity_details">Galeria</string>
    <string name="title_activity_swype_images">SwypeImagesActivity</string>
    <string name="title_activity_galeria_de_fotos">GaleriaDeFotos</string>
    <string name="exito_share">El archivo se compartió exitosamente</string>
    <string name="error_share">Ocurrió un error al compartir</string>
    <string name="exito_delete">El archivo se eliminó exitosamente</string>
    <string name="error_delete">Ocurrió un error al eliminar el archivo</string>
    <string name="title_activity_seleccionar_chat">Seleccionar chat</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    <string name="title_activity_action_notification">ActionNotification</string>
</resources>
