<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    tools:context=".NewCalendarEventActivity">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/fecha_inicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/fecha_inicio"
            android:inputType="datetime"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:textIsSelectable="true"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/hora_inicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hora_inicio"
            android:inputType="time"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:textIsSelectable="true"
            android:clickable="true"
            />

        <EditText
            android:id="@+id/hora_fin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hora_fin"
            android:inputType="time"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_marginLeft="5dp"
            android:textIsSelectable="true"
            android:clickable="true"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/titulo_evento"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/descripcion_evento"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/lugar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/lugar_evento"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/email_extra"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_evento"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="#313131"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/Cancelar"
            android:id="@+id/bCancelevento" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:text="@string/crear_evento"
            android:id="@+id/bCrearEvento" />
    </LinearLayout>
</LinearLayout>