<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    tools:context=".google_calendar.GoogleCalendarActivity">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:padding="10dp"
            android:id="@+id/viewToday"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="#313131"
            android:text="@string/option_today"
            android:clickable="true"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/design_snackbar_padding_vertical_2lines"
            android:drawableLeft="@drawable/ic_calendar_green"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="10dp"
            android:id="@+id/viewDate"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="#313131"
            android:text="@string/option_date"
            android:clickable="true"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/design_snackbar_padding_vertical_2lines"
            android:drawableLeft="@drawable/ic_calendar_green"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:padding="10dp"
            android:id="@+id/createDate"
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:layout_gravity="fill_horizontal"
            android:background="#313131"
            android:text="@string/option_create"
            android:clickable="true"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/design_snackbar_padding_vertical_2lines"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/edit"/>
    </LinearLayout>
</LinearLayout>