<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".aplicacion.LoginActivity"
    android:background="@color/colorNegro"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <!-- Login progress -->


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_form"
        android:id="@+id/imageView"
        android:src="@drawable/splash_screen"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorVerde"
                >
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorVerde"
                    android:textStyle="bold"
                    android:background="#313131"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorVerde"
                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorVerde"
                    android:textStyle="bold"
                    android:background="#313131"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@color/colorVerde"
                android:textSize="18sp"
                android:textColor="#000000" />

        </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Te has olvidado la contraseña?"
        android:id="@+id/textViewForgotYourPassword"
        android:linksClickable="false"
        android:clickable="true"
        android:textColor="@color/colorVerde"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:layout_below="@+id/login_form"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Registrarse en MiTouch"
        android:id="@+id/textViewRegistrarse"
        android:layout_gravity="center"
        android:linksClickable="false"
        android:clickable="true"
        android:textColor="@color/colorVerde"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_below="@+id/textViewForgotYourPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />
</RelativeLayout>



